# scmdata

./: .bandit.yml  .codecov.yml  .copier-answers.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  benchmark.py  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bump.yaml  ci-cd-workflow.yml  ci.yaml  deploy.yaml  install-conda.yml  install.yaml  release.yaml  test-conda-install.yml  test-pypi-install.yml
changelog/: 235.improvement.md  235.trivial.md  247.improvement.md  248.fix.md  260.improvement.md  262.feat.md  262.improvement.md  267.trivial.md  268.trivial.md  274.docs.md  274.trivial.md  275.breaking.md  298.improvement.md  298.trivial.md  316.fix.md  319.fix.md  321.fix.md  README.md
docs/source/: api.rst  changelog.md  changelog.rst  conf.py  data.rst  development.md  development.rst  index.md  index.rst  installation.rst  notebooks.rst  scmdata.database.rst  scmdata.dataframe.rst  scmdata.errors.rst  scmdata.filters.rst  scmdata.groupby.rst  scmdata.netcdf.rst  scmdata.offsets.rst  scmdata.ops.rst  scmdata.plotting.rst  scmdata.processing.rst  scmdata.remote.rst  scmdata.run.rst  scmdata.testing.rst  scmdata.time.rst  scmdata.timeseries.rst  scmdata.units.rst
docs/source/_static/: tables.css
docs/source/api/: scmdata.database.backends.base.rst  scmdata.database.backends.netcdf.rst  scmdata.database.backends.rst  scmdata.database.rst  scmdata.errors.rst  scmdata.filters.rst  scmdata.groupby.rst  scmdata.netcdf.rst  scmdata.offsets.rst  scmdata.ops.rst  scmdata.plotting.rst  scmdata.processing.rst  scmdata.pyam_compat.rst  scmdata.rst  scmdata.run.rst  scmdata.testing.rst  scmdata.time.rst  scmdata.timeseries.rst  scmdata.units.rst
docs/source/notebooks/: README.md  database.py  emissions-units-with-pint.py  netcdf.py  ops.py  plotting-with-seaborn.py  processing.py  rcp26_emissions.csv  scmrun.py  summary-statistics.py  time-operations.py  xarray-compatibility.py
notebooks/: database.ipynb  emissions-units-with-pint.ipynb  netcdf.ipynb  ops.ipynb  plotting-with-seaborn.ipynb  processing.ipynb  rcp26_emissions.csv  remote-datasets.ipynb  rolling-mean.ipynb  scmdataframe.ipynb  scmensemble.ipynb  scmrun-vs-scmdataframe.ipynb  scmrun.ipynb  summary-statistics.ipynb  time-operations.ipynb  xarray-compatibility.ipynb
scripts/: ops-profiling-result-display.py  ops-profiling.py  ops_examples.py  run-notebooks.sh  test-install.py  test_install.py
src/scmdata/: __init__.py  _base.py  _types.py  _typing.py  _version.py  _xarray.py  csv.py  database.py  dataframe.py  ensemble.py  errors.py  filters.py  groupby.py  netcdf.py  offsets.py  ops.py  plotting.py  processing.py  pyam_compat.py  remote.py  run.py  rw.py  testing.py  time.py  timeseries.py  units.py
src/scmdata/database/: __init__.py  _database.py  _utils.py  database.py  utils.py
src/scmdata/database/backends/: __init__.py  api.py  base.py  netcdf.py
stubs/: joblib.pyi
tests/: conftest.py  notebook-tests.cfg
tests/integration/: test_convert_scmdataframe_units.py  test_io.py  test_netcdf_integration.py  test_plotting_integration.py  test_processing.py  test_remote.py  test_scmrun_convert_units.py  test_scmrun_speed.py  test_xarray_integration.py
tests/test_data/: different_number_of_digits_years.csv  legacy_datetimes.nc  netcdf-scm_tas_Amon_bcc-csm1-1_rcp26_r1i1p1_209001-211012.nc  rcp26_emissions.csv  rcp26_emissions.xls  rcp26_emissions_capitalised.csv  rcp26_emissions_int.csv  rcp26_emissions_multi_sheet.xlsx  rcp26_emissions_multi_sheet_capitalised.xlsx  rcp26_emissions_multi_sheet_capitalised_int.xlsx  rcp26_emissions_multi_sheet_data.xlsx
tests/test_data/api_responses/: response_facets.json  response_meta.json
tests/test_data/sr15/: download-sr15-output.py
tests/unit/: test_database.py  test_dataframe.py  test_ensemble.py  test_groupby.py  test_netcdf.py  test_offsets.py  test_ops.py  test_plotting.py  test_pyam_compat.py  test_remote.py  test_run.py  test_rw.py  test_testing.py  test_time.py  test_timeseries.py  test_timeseries_convertor.py  test_unit_converter.py  test_units.py  test_utils.py  test_xarray.py
tests/unit/database/backends/: test_api.py
