[build-system]
requires = [
    "setuptools>=41.2",
    "setuptools_scm[toml]>=1.15",
    "wheel>=0.31.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]


[tool.black]
line-length = 88
target-version = ['py39']


[tool.mypy]
strict = true
# show error codes on failure with context
show_error_codes = true
show_error_context = true
# warn if code can't be reached
warn_unreachable = true
# importing following uses default settings
follow_imports = "normal"

# Opt outs
# We don't currently have 100% type coverage so the settings below are temporarily added
disallow_untyped_calls = false
disallow_untyped_defs = false