[metadata]
description-file = README.rst

[tool:pytest]
testpaths = tests

[versioneer]
VCS = git
style = pep440
versionfile_source = src/scmdata/_version.py
versionfile_build = scmdata/_version.py
tag_prefix = v
parentdir_prefix = scmdata-

[flake8]
max-line-length = 88
ignore = E203, E266, E501, W503
# E203 - whitespace before ':'. Opposite convention enforced by black
# E266 - too many leading '#' for block comments
# E501 - line too long. Handled by black, we have longer lines
# W503 - line break before binary operator.

[isort]
default_section = THIRDPARTY
# comma after multiline breaks like black:
include_trailing_comma = true
known_first_party = scmdata
# black default line length:
line_length = 88
# multiline breaks like black:
multi_line_output = 3
not_skip = __init__.py
skip = versioneer.py, src/scmdata/_version.py
