[metadata]
name = scmdata
author = Zeb Nicholls, Jared Lewis
author_email = jared.lewis@climate-resource.com, zebedee.nicholls@climate-energy-college.org
license = 3-Clause BSD License
keywords = data, simple climate model, climate, scm

description = Data handling for simple climate model data
description_file = README.rst
long_description_content_type = text/x-rst
long_description = file:README.rst

url = https://github.com/openscm/scmdata
project_urls =
    Source = https://github.com/openscm/scmdata
    Documentation = https://scmdata.readthedocs.io/en/latest
    Bug_Reports = https://github.com/openscm/scmdata/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    cftime
    numpy
    openscm-units
    packaging
    pandas>=1.0.4
    pint-pandas
    python-dateutil
    tqdm
    six
    xarray
    importlib-metadata; python_version < '3.8'

setup_requires =
    setuptools >= 41
    setuptools_scm

[options.packages.find]
where = src

[options.extras_require]
optional =
    netCDF4
    openpyxl
    xlrd
    scipy

plotting =
    matplotlib
    cftime>=1.5
    nc-time-axis>=1.3
    seaborn

notebooks =
     %(plotting)s
     %(optional)s
     notebook
     ipywidgets

tests =
    codecov
    nbval
    pytest>=5.0.0
    pytest-benchmark
    pytest-cov

docs =
     sphinx>2.1
     sphinx_rtd_theme

dev =
    %(optional)s
    %(plotting)s
    %(tests)s
    %(docs)s
   bandit
   black
   black-nb
   flake8
   isort>=5
   nbdime
   notebook
   ipywidgets
   pydocstyle
   pylint

[options.package_data]
scmdata =
     data/*.csv

[flake8]
# Provide some leeway for long string
max-line-length = 110
extend-ignore = E203
per-file-ignores =
     src/scmdata/ops.py: E501

[isort]
default_section = THIRDPARTY
# comma after multiline breaks like black:
include_trailing_comma = true
known_first_party = scmdata
# black default line length:
line_length = 88
# multiline breaks like black:
multi_line_output = 3
skip = src/scmdata/__init__.py

[mypy]
disallow_incomplete_defs = true
disallow_subclassing_any = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[pydocstyle]
# D213 - Multi-line docstring summary should start at the second line
# D402 - First line should not be the function's "signature"
add_select = D213, D402
# D105 - Missing docstring in magic method
# D200 - One-line docstring should fit on one line with quotes
# D205 - 1 blank line required between summary line and description
# D400 - First line should end with a period
add_ignore = D200, D205, D400, D105
convention = numpy
inherit = false
match = (?!test_|_version).*\.py

[tool:pytest]
testpaths = tests
